# oci

./: .gitignore  Makefile  NAMESPACE_STRATEGY.md  README.md  claude.md  deployments.json  index.json  launch_staging.py  oci-control.py  oci_oracle_mcp.py  pyproject.toml  requirements.txt  setup_oci_credentials.sh  staging_deployment.json
