[project]
name = "oci-python-vanilla"
version = "0.1.0"
description = ""
authors = [
    {name = "ldraney",email = "ldraney@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "oci (>=2.159.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
